new groups user_wise

--- a/Notebooks/createURM.ipynb
+++ b/Notebooks/createURM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stderr",
@@ -31,7 +31,7 @@
       "text/plain": "         UserID  ItemID  Data\n0             0      11     1\n1             0      21     0\n2             0      21     0\n3             0      21     0\n4             0      21     1\n...         ...     ...   ...\n5826501   41628   20448     0\n5826502   41628   20896     1\n5826503   41628   21506     1\n5826504   41628   22882     0\n5826505   41628   23757     0\n\n[5826506 rows x 3 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>UserID</th>\n      <th>ItemID</th>\n      <th>Data</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>11</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0</td>\n      <td>21</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>21</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0</td>\n      <td>21</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0</td>\n      <td>21</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5826501</th>\n      <td>41628</td>\n      <td>20448</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5826502</th>\n      <td>41628</td>\n      <td>20896</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5826503</th>\n      <td>41628</td>\n      <td>21506</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5826504</th>\n      <td>41628</td>\n      <td>22882</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>5826505</th>\n      <td>41628</td>\n      <td>23757</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5826506 rows × 3 columns</p>\n</div>"
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,17 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0],\n       ...,\n       [0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0],\n       [0, 0, 0, ..., 0, 0, 0]])"
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 11,
+   "outputs": [],
    "source": [
     "datasetCOO = sps.coo_matrix((dataset[\"Data\"].values, (dataset[\"UserID\"].values, dataset[\"ItemID\"].values)))\n",
     "userIDS = dataset['UserID'].unique()\n",
@@ -66,9 +57,28 @@
     "URM = np.zeros((len(userIDS), len(itemIDS)), dtype=int)\n",
     "for x in range(len(datasetCOO.data)):\n",
     "    if datasetCOO.data[x] == 0 and URM[datasetCOO.row[x]][datasetCOO.col[x]] != 1:\n",
-    "        URM[datasetCOO.row[x]][datasetCOO.col[x]] = int(1)\n",
-    "\n",
-    "URM"
+    "        URM[datasetCOO.row[x]][datasetCOO.col[x]] = int(1)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([   21,   124,   808,  1326,  1995,  5068,  7603,  8540, 10682,\n       13290, 14305, 18462], dtype=int64)"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interactions = len(URM[0,:].nonzero()[0])\n",
+    "interactions"
    ],
    "metadata": {
     "collapsed": false
