--- a/Notebooks/MetaDivision.ipynb
+++ b/Notebooks/MetaDivision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tt/9v6608x550n51759gpcrffsc0000gn/T/ipykernel_4632/958906415.py:14: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
+      "/var/folders/tt/9v6608x550n51759gpcrffsc0000gn/T/ipykernel_14363/958906415.py:14: DeprecationWarning: `np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself. Doing this will not modify any behavior and is safe. If you specifically wanted the numpy scalar type, use `np.float64` here.\n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  csr_matrix = csr_matrix.astype(dtype=np.float)\n"
      ]
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "URM = csr_matrix"
@@ -61,13 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "array([  2,   6,   2, ..., 156,   4,   2], dtype=int32)"
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "array([6012, 3608, 3171, ..., 1863, 2282, 7382])"
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,13 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "[2,\n 6,\n 2,\n 2,\n 7,\n 20,\n 4,\n 14,\n 3,\n 6,\n 6,\n 33,\n 3,\n 2,\n 3,\n 14,\n 2,\n 46,\n 12,\n 2,\n 7,\n 15,\n 19,\n 8,\n 3,\n 6,\n 5,\n 8,\n 7,\n 10,\n 8,\n 3,\n 2,\n 4,\n 3,\n 3,\n 14,\n 13,\n 7,\n 2,\n 7,\n 12,\n 10,\n 65,\n 3,\n 4,\n 86,\n 7,\n 29,\n 4,\n 6,\n 14,\n 6,\n 8,\n 2,\n 2,\n 4,\n 17,\n 2,\n 3,\n 6,\n 7,\n 33,\n 8,\n 8,\n 5,\n 9,\n 2,\n 31,\n 2,\n 2,\n 3,\n 20,\n 20,\n 31,\n 21,\n 14,\n 57,\n 4,\n 3,\n 3,\n 46,\n 20,\n 6,\n 16,\n 2,\n 2,\n 31,\n 46,\n 3,\n 25,\n 6,\n 7,\n 8,\n 6,\n 3,\n 6,\n 4,\n 7,\n 15,\n 9,\n 9,\n 4,\n 5,\n 7,\n 3,\n 4,\n 6,\n 17,\n 14,\n 2,\n 12,\n 6,\n 2,\n 6,\n 9,\n 14,\n 3,\n 6,\n 44,\n 3,\n 11,\n 7,\n 7,\n 11,\n 14,\n 5,\n 3,\n 19,\n 4,\n 12,\n 4,\n 3,\n 13,\n 4,\n 7,\n 2,\n 6,\n 2,\n 258,\n 4,\n 25,\n 180,\n 18,\n 2,\n 4,\n 5,\n 2,\n 18,\n 33,\n 3,\n 4,\n 2,\n 2,\n 4,\n 13,\n 14,\n 5,\n 7,\n 8,\n 10,\n 2,\n 1,\n 5,\n 6,\n 165,\n 2,\n 2,\n 2,\n 2,\n 2,\n 2,\n 20,\n 2,\n 4,\n 2,\n 3,\n 31,\n 2,\n 5,\n 12,\n 14,\n 4,\n 11,\n 8,\n 2,\n 13,\n 6,\n 3,\n 5,\n 7,\n 5,\n 4,\n 14,\n 2,\n 8,\n 5,\n 28,\n 11,\n 11,\n 4,\n 24,\n 4,\n 8,\n 5,\n 9,\n 3,\n 22,\n 11,\n 7,\n 25,\n 33,\n 2,\n 2,\n 8,\n 8,\n 37,\n 6,\n 4,\n 5,\n 2,\n 4,\n 4,\n 3,\n 20,\n 9,\n 4,\n 55,\n 5,\n 3,\n 7,\n 8,\n 6,\n 5,\n 3,\n 3,\n 13,\n 3,\n 5,\n 2,\n 5,\n 4,\n 28,\n 3,\n 11,\n 12,\n 25,\n 6,\n 3,\n 13,\n 5,\n 4,\n 14,\n 21,\n 4,\n 4,\n 20,\n 8,\n 5,\n 4,\n 37,\n 8,\n 9,\n 3,\n 5,\n 1,\n 2,\n 3,\n 2,\n 2,\n 4,\n 338,\n 11,\n 9,\n 2,\n 6,\n 4,\n 52,\n 5,\n 2,\n 8,\n 81,\n 3,\n 18,\n 5,\n 2,\n 20,\n 2,\n 14,\n 8,\n 5,\n 2,\n 5,\n 4,\n 2,\n 9,\n 11,\n 27,\n 4,\n 6,\n 2,\n 9,\n 7,\n 14,\n 21,\n 10,\n 4,\n 4,\n 3,\n 5,\n 3,\n 10,\n 18,\n 2,\n 31,\n 73,\n 15,\n 10,\n 3,\n 4,\n 4,\n 4,\n 133,\n 7,\n 3,\n 4,\n 3,\n 9,\n 26,\n 13,\n 3,\n 4,\n 37,\n 26,\n 13,\n 13,\n 6,\n 8,\n 2,\n 7,\n 8,\n 8,\n 3,\n 2,\n 15,\n 6,\n 8,\n 3,\n 2,\n 7,\n 5,\n 1,\n 22,\n 7,\n 3,\n 3,\n 6,\n 3,\n 26,\n 6,\n 21,\n 14,\n 5,\n 3,\n 1,\n 6,\n 2,\n 8,\n 6,\n 11,\n 6,\n 5,\n 29,\n 3,\n 4,\n 73,\n 5,\n 20,\n 13,\n 6,\n 5,\n 3,\n 4,\n 20,\n 73,\n 8,\n 2,\n 4,\n 3,\n 14,\n 12,\n 16,\n 6,\n 2,\n 15,\n 5,\n 7,\n 187,\n 4,\n 46,\n 3,\n 10,\n 5,\n 1,\n 28,\n 2,\n 9,\n 4,\n 14,\n 23,\n 2,\n 5,\n 2,\n 5,\n 9,\n 176,\n 3,\n 9,\n 14,\n 6,\n 11,\n 6,\n 3,\n 11,\n 46,\n 3,\n 2,\n 2,\n 2,\n 4,\n 21,\n 4,\n 21,\n 5,\n 7,\n 7,\n 4,\n 3,\n 3,\n 4,\n 3,\n 13,\n 3,\n 2,\n 6,\n 2,\n 16,\n 3,\n 37,\n 30,\n 2,\n 11,\n 8,\n 3,\n 3,\n 33,\n 14,\n 14,\n 3,\n 11,\n 2,\n 6,\n 3,\n 6,\n 2,\n 8,\n 2,\n 8,\n 32,\n 3,\n 32,\n 39,\n 4,\n 2,\n 20,\n 3,\n 10,\n 4,\n 3,\n 17,\n 9,\n 8,\n 4,\n 4,\n 12,\n 37,\n 4,\n 13,\n 3,\n 14,\n 7,\n 9,\n 7,\n 17,\n 3,\n 7,\n 3,\n 18,\n 53,\n 17,\n 9,\n 10,\n 6,\n 31,\n 6,\n 6,\n 3,\n 3,\n 11,\n 4,\n 8,\n 3,\n 9,\n 5,\n 8,\n 2,\n 5,\n 17,\n 82,\n 51,\n 4,\n 9,\n 5,\n 2,\n 7,\n 42,\n 23,\n 15,\n 11,\n 8,\n 4,\n 3,\n 14,\n 3,\n 7,\n 4,\n 2,\n 6,\n 3,\n 8,\n 7,\n 3,\n 7,\n 5,\n 6,\n 6,\n 26,\n 3,\n 4,\n 3,\n 8,\n 42,\n 1,\n 4,\n 6,\n 6,\n 2,\n 9,\n 3,\n 2,\n 10,\n 4,\n 30,\n 10,\n 4,\n 7,\n 10,\n 21,\n 2,\n 20,\n 7,\n 20,\n 3,\n 26,\n 9,\n 4,\n 20,\n 20,\n 3,\n 26,\n 6,\n 7,\n 2,\n 16,\n 21,\n 2,\n 2,\n 4,\n 74,\n 8,\n 49,\n 10,\n 13,\n 2,\n 4,\n 6,\n 8,\n 4,\n 2,\n 4,\n 2,\n 111,\n 13,\n 6,\n 5,\n 5,\n 2,\n 6,\n 8,\n 23,\n 11,\n 4,\n 4,\n 48,\n 3,\n 11,\n 3,\n 4,\n 2,\n 5,\n 5,\n 8,\n 3,\n 21,\n 2,\n 3,\n 52,\n 15,\n 47,\n 6,\n 5,\n 8,\n 2,\n 6,\n 3,\n 3,\n 6,\n 4,\n 18,\n 6,\n 8,\n 3,\n 3,\n 4,\n 24,\n 7,\n 5,\n 34,\n 3,\n 2,\n 13,\n 10,\n 3,\n 2,\n 4,\n 5,\n 3,\n 3,\n 2,\n 24,\n 5,\n 2,\n 15,\n 4,\n 2,\n 21,\n 5,\n 2,\n 3,\n 2,\n 4,\n 3,\n 5,\n 3,\n 8,\n 3,\n 92,\n 26,\n 3,\n 13,\n 5,\n 14,\n 6,\n 7,\n 39,\n 2,\n 3,\n 39,\n 5,\n 3,\n 10,\n 3,\n 17,\n 1,\n 6,\n 55,\n 4,\n 26,\n 34,\n 5,\n 17,\n 8,\n 15,\n 14,\n 3,\n 4,\n 2,\n 7,\n 6,\n 48,\n 17,\n 6,\n 8,\n 6,\n 4,\n 15,\n 3,\n 3,\n 3,\n 3,\n 6,\n 2,\n 17,\n 6,\n 19,\n 3,\n 2,\n 6,\n 27,\n 5,\n 5,\n 13,\n 3,\n 3,\n 13,\n 4,\n 11,\n 6,\n 2,\n 71,\n 18,\n 37,\n 2,\n 4,\n 2,\n 2,\n 2,\n 15,\n 5,\n 1,\n 8,\n 6,\n 4,\n 2,\n 4,\n 2,\n 3,\n 8,\n 9,\n 6,\n 3,\n 14,\n 8,\n 22,\n 7,\n 4,\n 63,\n 2,\n 4,\n 8,\n 13,\n 51,\n 7,\n 79,\n 12,\n 1,\n 14,\n 8,\n 1,\n 3,\n 37,\n 3,\n 76,\n 13,\n 15,\n 2,\n 132,\n 6,\n 9,\n 3,\n 3,\n 26,\n 5,\n 3,\n 26,\n 11,\n 3,\n 3,\n 7,\n 1,\n 3,\n 5,\n 6,\n 5,\n 8,\n 8,\n 5,\n 8,\n 2,\n 15,\n 4,\n 51,\n 7,\n 4,\n 4,\n 5,\n 6,\n 5,\n 46,\n 3,\n 6,\n 5,\n 14,\n 4,\n 26,\n 8,\n 23,\n 8,\n 46,\n 11,\n 6,\n 2,\n 2,\n 7,\n 2,\n 4,\n 7,\n 308,\n 2,\n 11,\n 2,\n 2,\n 16,\n 4,\n 11,\n 3,\n 14,\n 7,\n 6,\n 2,\n 9,\n 6,\n 8,\n 9,\n 3,\n 3,\n 6,\n 4,\n 8,\n 3,\n 6,\n 11,\n 22,\n 11,\n 6,\n 3,\n 5,\n 2,\n 8,\n 2,\n 5,\n 4,\n 7,\n 2,\n 18,\n 3,\n 20,\n 2,\n 2,\n 3,\n 50,\n 9,\n 4,\n 7,\n 8,\n 8,\n 7,\n 11,\n 3,\n 2,\n 4,\n 2,\n 200,\n 3,\n 5,\n 9,\n 10,\n 3,\n 17,\n 5,\n 3,\n 6,\n 14,\n 4,\n 5,\n 2,\n 33,\n 20,\n 69,\n 9,\n 3,\n 6,\n 3,\n 7,\n 3,\n 37,\n 3,\n 46,\n 22,\n 5,\n 3,\n 3,\n 2,\n 25,\n 13,\n 14,\n 9,\n 3,\n 8,\n 5,\n 6,\n 8,\n 5,\n 3,\n 3,\n 3,\n 38,\n 20,\n 4,\n 20,\n 5,\n 5,\n 3,\n 8,\n 2,\n 5,\n 8,\n 154,\n 7,\n 6,\n 3,\n 12,\n 3,\n 4,\n 2,\n 32,\n 35,\n 7,\n 8,\n 2,\n 2,\n 3,\n 34,\n 15,\n 9,\n 2,\n 9,\n 16,\n 23,\n 3,\n 21,\n 21,\n 3,\n 2,\n 3,\n 8,\n 30,\n 8,\n 26,\n 6,\n 7,\n 5,\n 37,\n 11,\n 2,\n 21,\n 20,\n 14,\n 8,\n 5,\n 2,\n 14,\n 3,\n 7,\n 2,\n 7,\n 7,\n 7,\n 18,\n 10,\n ...]"
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,13 +126,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "<AxesSubplot:ylabel='Count'>"
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -156,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "[[0, 7], [8, 18], [19, 1653]]"
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,6 +196,48 @@
     "\n",
     "    users_in_group = [user_id for user_id in range(len(interactions))\n",
     "                      if (lower_bound <= interactions[user_id] <= higher_bound)]\n",
+    "    users_in_group_p_len = profile_length[users_in_group]\n",
+    "\n",
+    "    users_not_in_group_flag = np.isin(sorted_users, users_in_group, invert=True)\n",
+    "    users_not_in_group = sorted_users[users_not_in_group_flag]\n",
+    "\n",
+    "    print(\"Group {}, #users in group {}, average p.len {:.2f}, median {}, min {}, max {}\".format(\n",
+    "        group_id,\n",
+    "        len(users_in_group),\n",
+    "        users_in_group_p_len.mean(),\n",
+    "        np.median(users_in_group_p_len),\n",
+    "        users_in_group_p_len.min(),\n",
+    "        users_in_group_p_len.max()))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Group 0, #users in group 1589, average p.len 2.26, median 2.0, min 1, max 3\n",
+      "Group 1, #users in group 1589, average p.len 3.60, median 4.0, min 3, max 5\n",
+      "Group 2, #users in group 1589, average p.len 6.00, median 6.0, min 5, max 8\n",
+      "Group 3, #users in group 1589, average p.len 10.28, median 10.0, min 8, max 15\n",
+      "Group 4, #users in group 1589, average p.len 47.42, median 28.0, min 15, max 1074\n"
+     ]
+    }
+   ],
+   "source": [
+    "block_size = int(len(profile_length) * 0.2)\n",
+    "\n",
+    "for group_id in range(0, 5):\n",
+    "    start_pos = group_id * block_size\n",
+    "    end_pos = min((group_id + 1) * block_size, len(profile_length))\n",
+    "\n",
+    "    users_in_group = sorted_users[start_pos:end_pos]\n",
+    "\n",
     "    users_in_group_p_len = profile_length[users_in_group]\n",
     "\n",
     "    users_not_in_group_flag = np.isin(sorted_users, users_in_group, invert=True)\n",
